[project]
name = "pybr-tutorial-decorator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12,<1.0",
    "pillow>=10,<11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
]

[project.scripts]
pybr-image = "pybr_tutorial_decorator.cli:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pybr_tutorial_decorator"]
exclude = ["tests", "tests.*", "sample_images", "sample_images.*"]
